# wordReportCheck

./: .gitattributes  .gitignore  README.md  pyproject.toml
outputs/: README.md
samples/: README.md
scripts/: copy_docs.bat  dump_labels.py  force_write_grade_date.py  validate_outputs.py
src/wordreportcheck/: cli.py  schemas.py
src/wordreportcheck/parsers/: docx_parser.py  docx_writer.py
src/wordreportcheck/scoring/: deepseek_client.py  kimi_client.py
